More auth documentation
